title block remove metadata
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/2023-02-04-build-cicd-pipelines-as-code-run-them-anywhere/index.qmd
+++ b/2023-02-04-build-cicd-pipelines-as-code-run-them-anywhere/index.qmd
@@ -6,11 +6,13 @@ description: |
     Dagger is a programmable CI/CD engine that runs pipelines in containers allowing developers to build and debug pipelines locally and then run them anywhere avoiding vendor lock-in to a particular CI/CD solution.
 
     While the portable pipeline concept may not be new, by combining that with the ability to write pipelines as code (Go, Python, TypeScript, JavaScript, CUE supported at the moment) instead of YAML, Dagger revolutionizes how CI/CD pipelines are built and ran.
+categories: [cicd, dagger]
+image: preview.png
 format:
   revealjs:
     theme: default
     title-slide-attributes:
-        data-background-color: "#3c66ff"
+        data-background-color: "#131225"
 ---
 
 # `whoami`
@@ -40,7 +42,7 @@ Help engineering teams focus on their business
 - Why Dagger?
 - Demo
 
-# Challenges of CI/CD in 2023
+# Challenges of CI/CD today
 
 ---
 
@@ -74,7 +76,7 @@ Help engineering teams focus on their business
 
 [Playground](https://play.dagger.cloud/playground)
 
-# Demo {background-color="#02add8"}
+# Demo {background-color="#131225"}
 
 # Thank you
 
