--- a/2023-02-04-automating-secret-rotation-in-kubernetes/index.qmd
+++ b/2023-02-04-automating-secret-rotation-in-kubernetes/index.qmd
@@ -131,6 +131,10 @@ sequenceDiagram
 
 # Demo {background-color="#326ce5"}
 
+::: {style="font-size: 30px;"}
+https://github.com/sagikazarmark/demo-fosdem23-kube-secret-rotation
+:::
+
 # Thank you
 
 _Any questions?_
