--- a/2023-02-04-building-a-ci-pipeline-with-dagger-in-go/index.qmd
+++ b/2023-02-04-building-a-ci-pipeline-with-dagger-in-go/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Building a CI pipeline with Dagger in Go"
-date: 2023-02-04
+date: "2023-02-04 11:30"
 event: "FOSDEM '23"
 description: |
     Dagger is a programmable CI/CD engine that runs pipelines in containers allowing developers to build and debug pipelines locally and then run them anywhere avoiding vendor lock-in to a particular CI/CD solution.
