add dagger demo links
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/2023-02-04-building-a-ci-pipeline-with-dagger-in-go/index.qmd
+++ b/2023-02-04-building-a-ci-pipeline-with-dagger-in-go/index.qmd
@@ -67,6 +67,10 @@ Help engineering teams focus on their business
 
 # Demo {background-color="#02add8"}
 
+::: {style="font-size: 30px;"}
+https://github.com/sagikazarmark/dagger-go-example
+:::
+
 # Getting started
 
 - [Documentation](https://docs.dagger.io/)
