add code samples
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/2023-03-22-bevezetes-a-grpc-hasznalataba/index.qmd
+++ b/2023-03-22-bevezetes-a-grpc-hasznalataba/index.qmd
@@ -34,6 +34,10 @@ _Engineering Technical Lead @ Cisco_
 - When to use gRPC?
 - Alternatives
 
+# Code samples
+
+[https://github.com/sagikazarmark/grpc-intro-workshop](https://github.com/sagikazarmark/grpc-intro-workshop)
+
 # About RPC
 
 ## Definition 🤔
