--- a/2023-03-22-bevezetes-a-grpc-hasznalataba/index.qmd
+++ b/2023-03-22-bevezetes-a-grpc-hasznalataba/index.qmd
@@ -171,7 +171,7 @@ Host: api.example.com
 
 _whisper_ microservices
 
-## gRPC shortcomings
+## gRPC weeknesses
 
 - Limited web/browser support
 - Not human-readable format (more difficult to debug)
