--- a/index.qmd
+++ b/index.qmd
@@ -8,6 +8,8 @@ listing:
   categories: true
   sort-ui: false
   filter-ui: false
+  # exclude:
+  #   hidden: "true"
 page-layout: full
 title-block-banner: true
 # format: html
